[gd_scene load_steps=19 format=2]

[ext_resource path="res://scene/levelUI.gd" type="Script" id=1]
[ext_resource path="res://assets/items/heartWhite.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/Controls Button press.png" type="Texture" id=3]
[ext_resource path="res://scene/buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/buttons/Controls Button.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/Controls Button hover.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/Menu Button.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/Menu Button press.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/Menu Button hover.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/Resume Button press.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/Resume Button hover.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/Resume Button.png" type="Texture" id=12]
[ext_resource path="res://scene/controls.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/vinizinho.ttf" type="DynamicFontData" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.309804 )
border_width_left = 3
border_width_right = 3
border_color = Color( 0.847059, 0.847059, 0.847059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.705882 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 14 )

[node name="levelUI" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="heartsUI" type="CanvasLayer" parent="UI"]

[node name="Panel" type="Panel" parent="UI/heartsUI"]
margin_left = 44.0
margin_top = 42.0
margin_right = 129.0
margin_bottom = 74.0
custom_styles/panel = SubResource( 1 )

[node name="numOfHearts" type="Label" parent="UI/heartsUI"]
margin_left = 42.0
margin_top = 36.0
margin_right = 97.0
margin_bottom = 82.0
text = "3"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="UI/heartsUI"]
margin_left = 85.0
margin_top = 45.0
margin_right = 109.0
margin_bottom = 69.0
texture = ExtResource( 2 )
expand = true

[node name="menu" type="CanvasLayer" parent="UI"]

[node name="Panel" type="Panel" parent="UI/menu"]
margin_left = -54.0
margin_top = -55.0
margin_right = 1109.0
margin_bottom = 671.0
custom_styles/panel = SubResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="UI/menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -514.0
margin_top = -150.0
margin_right = 2041.0
margin_bottom = 645.0
rect_scale = Vector2( 0.4, 0.4 )
alignment = 1

[node name="ResumeButton" parent="UI/menu/Buttons" instance=ExtResource( 4 )]
margin_left = 977.0
margin_right = 1577.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
script = null

[node name="ControlsButton" parent="UI/menu/Buttons" instance=ExtResource( 4 )]
margin_left = 977.0
margin_top = 266.0
margin_right = 1577.0
margin_bottom = 466.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
script = null

[node name="MenuButton" parent="UI/menu/Buttons" instance=ExtResource( 4 )]
margin_left = 977.0
margin_top = 532.0
margin_right = 1577.0
margin_bottom = 732.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
open_scene = "res://scene/menu.tscn"

[node name="gameOverUI" type="CanvasLayer" parent="UI"]

[node name="Panel" type="Panel" parent="UI/gameOverUI"]
margin_left = -79.0
margin_top = -71.0
margin_right = 1116.0
margin_bottom = 643.0
custom_styles/panel = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/gameOverUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -46.0
margin_right = 182.0
margin_bottom = 67.0
custom_colors/default_color = Color( 0.960784, 0.960784, 0.960784, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Game over
"
scroll_active = false

[node name="Node2D" parent="." instance=ExtResource( 13 )]
position = Vector2( 388.8, 256.4 )
scale = Vector2( 0.4, 0.4 )
z_index = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="button_up" from="UI/menu/Buttons/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="UI/menu/Buttons/ControlsButton" to="." method="_on_ControlsButton_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
